--- a/Hotel_home.html
+++ b/Hotel_home.html
@@ -4,8 +4,9 @@
     <link href="Style.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <title>Home page</title>
+    <script src="Script.js"></script>
 </head>
-<body>
+<body onload="load()">
     <header>
         <nav class="nav">
             <img id="logo" src="logo.jpg" />
