--- a/Hotel_home.html
+++ b/Hotel_home.html
@@ -12,9 +12,9 @@
             <img id="logo" src="logo.jpg" />
             <div class="spacer"></div>
             <ul class="ul-list">
-                <li class="li-list"><a href="Hotel_home.html">Home</a></li>
-                <li class="li-list"><a href="hotel_stanze.html">Le Nostre Stanze</a></li>
-                <li class="li-list"><a href="hotel_contatti.html">Contatto</a></li>
+                <li class="li-list"><a class="link-active" href="Hotel_home.html">Home</a></li>
+                <li class="li-list"><a class="link-active" href="hotel_stanze.html">Le Nostre Stanze</a></li>
+                <li class="li-list"><a class="link-active" href="hotel_contatti.html">Contatto</a></li>
             </ul>
         </nav>
     </header>
