--- a/Hotel_home.html
+++ b/Hotel_home.html
@@ -11,6 +11,7 @@
         <nav class="nav">
             <img id="logo" src="logo.jpg" />
             <div class="spacer"></div>
+            <a href="loginPage.html"><input type="button" value="login"/></a>
             <ul class="ul-list">
                 <li class="li-list"><a class="link-active" href="Hotel_home.html">Home</a></li>
                 <li class="li-list"><a class="link-active" href="hotel_stanze.html">Le Nostre Stanze</a></li>
